syntax = "proto3";

package user;

service User {
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResult) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResult) {}
    rpc BookingDeleted(BookingDeletedRequest) returns (BookingDeletedResult) {}
    rpc CreatedMarkedBooking(CreatedBookingRequest) returns (CreatedBookingResult) {}
    rpc CreatedBooking(CreatedBookingRequest) returns (CreatedBookingResult) {}
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserResult {
    bool successful = 1;
}

message CreateUserRequest {
    string name = 1;
}

message CreateUserResult {
    int32 id = 1;
}

message BookingDeletedRequest {
    int32 userID = 1;
    int32 bookingID = 2;
}

message BookingDeletedResult {
}

message CreatedBookingRequest {
    int32 userID = 1;
    int32 bookingID = 2;
}

message CreatedBookingResult {

}

message UserData {
    int32 id = 1;
    string name = 2;
}
